--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css">
     <title>js</title>
 </head>
 <body>
-    <h1>mido js</h1>
-    <h2>js elzero</h2>
-
-
+  
+    <h2>java script elzero challenges</h2"></a>
 <div class="demo">
-    
+    <a href="main.html">main</a>
+    <a href="array.html">array</a>
+
 </div>
 
 
-    <script src="main.js"></script>
-    <script src="array.js"></script>
+
 
 </body>
 </html>
