function challenge ------------------- done

--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 </head>
 <body>
   
-    <h2>java script elzero challenges</h2"></a>
-<div class="demo">
-    <a href="main.html">main</a>
-    <a href="array.html">array</a>
+    <h2>java script elzero challenges</h2">
+    
+<div class="linkes">
+    <ul>
+        <li> <a href="main.html">main</a></li>  
+        <li><a href="array.html">array</a></li>   
+        <li><a href="function.html">function</a></li>   
+    </ul>
 
 </div>
 
