higher oreder function ---------done

--- a/function.html
+++ b/function.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/style.css" />
+
     <title>Document</title>
-</head>
-<body>
-    
+  </head>
+  <body>
+    <ul>
+      <li><a href="">one</a></li>
+      <li><a href="">two </a></li>
+      <li><a href="">three</a></li>
+      <li><a href="">four</a></li>
+      <li><a href="">five</a></li>
+    </ul>
+
+    <div class="content">
+      <div>js forEach() implement1</div>
+      <div>js forEach() implement2</div>
+      <div>js forEach() implement3</div>
+      <div>js forEach() implement4</div>
+      <div>js forEach() implement5</div>
+    </div>
     <script src="function.js"></script>
-</body>
+  </body>
 </html>
