dom challenge & higher function ----------done

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     
 <div class="linkes">
     <ul>
-        <li> <a href="main.html">main</a></li>  
-        <li><a href="array.html">array</a></li>   
-        <li><a href="function.html">function</a></li>   
+        <li> <a href="pages/main.html">main</a></li>  
+        <li><a href=" pages/array.html">array</a></li>   
+        <li><a href=" pages/function.html">function</a></li>   
     </ul>
 
 </div>
