--- a/pages/array.html
+++ b/pages/array.html
@@ -6,6 +6,6 @@
     <title>Arrays</title>
 </head>
 <body>
-    <script src="array.js"></script>
+    <script src="../array.js"></script>
 </body>
 </html>
