--- a/pages/function.html
+++ b/pages/function.html
@@ -23,6 +23,6 @@
       <div>js forEach() implement4</div>
       <div>js forEach() implement5</div>
     </div>
-    <script src="function.js"></script>
+    <script src="../function.js"></script>
   </body>
 </html>
