--- a/pages/main.html
+++ b/pages/main.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>console.log('');</h1>
-    <script src="main.js"></script>
+    <script src="../main.js"></script>
 </body>
 </html>
