--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
         <li> <a href="pages/main.html">main</a></li>  
         <li><a href=" pages/array.html">array</a></li>   
         <li><a href=" pages/function.html">function</a></li>   
-    </ul>
+        <li><a href=" pages/bom.html">bom</a></li>  
+        <li><a href=" pages/object.html">object</a></li>   
 
+    </ul>
 </div>
 
 
