--- a/pages/bom.html
+++ b/pages/bom.html
@@ -22,6 +22,6 @@
     <div class="taskdiv">
 
     </div>
-    <script src="../bom.js"></script>
+    <script src="../scripts/bom.js"></script>
   </body>
 </html>
