--- a/pages/struct.html
+++ b/pages/struct.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main</title>
+    <title>struct</title>
 </head>
 <body>
-    <h1>console.log('');</h1>
-    <script src="../scripts/main.js"></script>
+ <script src="../scripts/datastruct.js"></script>   
 </body>
 </html>
