Map and Set challenge

--- a/pages/struct.html
+++ b/pages/struct.html
@@ -6,6 +6,10 @@
     <title>struct</title>
 </head>
 <body>
+
+    <div>
+        <h1>console.log();</h1>
+    </div>
  <script src="../scripts/datastruct.js"></script>   
 </body>
 </html>
