--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <li><a href=" pages/function.html">function</a></li>   
         <li><a href=" pages/bom.html">bom</a></li>  
         <li><a href=" pages/object.html">object</a></li>   
+<li><a href="pages/struct.html">destruct arrays</a></li>
+<li><a href="pages/oop.html">oop</a></li>
 
     </ul>
 </div>
