--- a/index.html
+++ b/index.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
     <title>js</title>
 </head>
-<body>
-  
-    <h2>java script elzero challenges</h2">
-    
-<div class="linkes">
-    <ul>
-        <li> <a href="pages/main.html">main</a></li>  
-        <li><a href=" pages/array.html">array</a></li>   
-        <li><a href=" pages/function.html">function</a></li>   
-        <li><a href=" pages/bom.html">bom</a></li>  
-        <li><a href=" pages/object.html">object</a></li>   
-<li><a href="pages/struct.html">destruct arrays</a></li>
-<li><a href="pages/oop.html">oop</a></li>
 
-    </ul>
-</div>
+<body>
+
+    <h2>java script elzero challenges</h2">
+
+        <div class="linkes">
+            <ul>
+                <li> <a href="pages/main.html">main</a></li>
+                <li><a href=" pages/array.html">array</a></li>
+                <li><a href=" pages/function.html">function</a></li>
+                <li><a href=" pages/bom.html">bom</a></li>
+                <li><a href=" pages/object.html">object</a></li>
+                <li><a href="pages/struct.html">destruct arrays</a></li>
+                <li><a href="pages/oop.html">oop</a></li>
+                <li><a href="pages/module.html">modules "import & export"</a></li>
+
+
+            </ul>
+        </div>
 
 
 
 
 </body>
+
 </html>
