--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <h2>java script elzero challenges</h2">
-
+<h3 style="color: darkgreen;">console.log()</h3>
         <div class="linkes">
             <ul>
                 <li> <a href="pages/main.html">main</a></li>
