--- a/pages/module.html
+++ b/pages/module.html
@@ -6,7 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>import & export</h1>
+    <h1 class="head">import & export</h1>
+    <h1 class="head">async & sync</h1>
+
 
 
 
